--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     var jsonInfo = JSON.parse(keyInfo);
     var params = {
       "obj": jsonInfo.certInfos[0].pubCert,
-      "cert_thumb": jsonInfo.certInfos[0].thumbprint,
+      "cert_thumb": "",
       "cms": false,
       "detached": false,
       "pin": "",
-      "cert_sn": ""
+      "cert_sn": jsonInfo.certInfos[0].serialnumber
     };
     var msg = JSON.stringify(params);
     console.log('msg', msg)
