--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       "cms": false,
       "detached": false,
       "pin": "",
-      "cert_sn": jsonInfo.certInfos[0].serialnumber
+      "cert_sn": "",
     };
     var msg = JSON.stringify(params);
     console.log('msg', msg)
